---
source: crates/isobmff/src/conformance_tests.rs
expression: redeserialized_file
snapshot_kind: text
---
IsobmffFile {
    ftyp: Some(
        FileTypeBox {
            major_brand: Brand::IsoM,
            minor_version: 1,
            compatible_brands: [
                Brand::IsoM,
                Brand([109, 112, 50, 49]),
                Brand::Iso2,
            ],
        },
    ),
    etyp: [],
    otyp: [],
    pdin: None,
    moov: Some(
        MovieBox {
            mvhd: MovieHeaderBox {
                full_header: FullBoxHeader {
                    version: 0,
                    flags: U24Be(
                        0,
                    ),
                },
                creation_time: 3235468835,
                modification_time: 3235468835,
                timescale: 600,
                duration: 600,
                rate: 1,
                volume: 1,
                reserved1: 0,
                reserved2: 0,
                matrix: [
                    65536,
                    0,
                    0,
                    0,
                    65536,
                    0,
                    0,
                    0,
                    1073741824,
                ],
                pre_defined: [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                next_track_id: 2,
            },
            meta: Some(
                MetaBox {
                    full_header: FullBoxHeader {
                        version: 0,
                        flags: U24Be(
                            0,
                        ),
                    },
                    hdlr: HandlerBox {
                        full_header: FullBoxHeader {
                            version: 0,
                            flags: U24Be(
                                0,
                            ),
                        },
                        pre_defined: 0,
                        handler_type: HandlerType([69, 78, 83, 84]),
                        reserved: [
                            0,
                            0,
                            0,
                        ],
                        name: Utf8String(
                            "GPAC ENST Handler",
                        ),
                    },
                    dinf: None,
                    iloc: Some(
                        ItemLocationBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            offset_size: 0,
                            length_size: 0,
                            base_offset_size: 4,
                            index_size: 0,
                            item_count: Some(
                                1,
                            ),
                            items: [
                                ItemLocationBoxItem {
                                    item_id: Some(
                                        1,
                                    ),
                                    construction_method: None,
                                    data_reference_index: 0,
                                    base_offset: 0,
                                    extent_count: 1,
                                    extents: [
                                        ItemLocationBoxExtent {
                                            item_reference_index: None,
                                            extent_offset: 0,
                                            extent_length: 0,
                                        },
                                    ],
                                },
                            ],
                        },
                    ),
                    ipro: None,
                    iinf: Some(
                        ItemInfoBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            entry_count: 1,
                            item_infos: [
                                ItemInfoEntry {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    item_id: Some(
                                        1,
                                    ),
                                    item_protection_index: 0,
                                    item_type: [
                                        109,
                                        105,
                                        109,
                                        101,
                                    ],
                                    item_name: Utf8String(
                                        "",
                                    ),
                                    item: Some(
                                        Mime {
                                            content_type: Utf8String(
                                                "application/mp4",
                                            ),
                                            content_encoding: Utf8String(
                                                "",
                                            ),
                                        },
                                    ),
                                    extension_type: None,
                                    extension: None,
                                },
                            ],
                        },
                    ),
                    xml: None,
                    bxml: None,
                    pitm: None,
                    fiin: None,
                    idat: None,
                    iref: None,
                    iprp: None,
                    grpl: None,
                    unknown_boxes: [],
                },
            ),
            trak: [
                TrackBox {
                    tkhd: TrackHeaderBox {
                        version: 0,
                        flags: TrackHeaderBoxFlags(
                            TrackEnabled,
                        ),
                        creation_time: 3235468835,
                        modification_time: 3519107925,
                        track_id: 1,
                        reserved1: 0,
                        duration: 600,
                        reserved2: 0,
                        layer: 0,
                        alternate_group: 0,
                        volume: 0,
                        reserved3: 0,
                        matrix: [
                            65536,
                            0,
                            0,
                            0,
                            65536,
                            0,
                            0,
                            0,
                            1073741824,
                        ],
                        width: 100,
                        height: 100,
                    },
                    tref: None,
                    trgr: None,
                    edts: None,
                    ttyp: None,
                    meta: Some(
                        MetaBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            hdlr: HandlerBox {
                                full_header: FullBoxHeader {
                                    version: 0,
                                    flags: U24Be(
                                        0,
                                    ),
                                },
                                pre_defined: 0,
                                handler_type: HandlerType([71, 80, 65, 67]),
                                reserved: [
                                    0,
                                    0,
                                    0,
                                ],
                                name: Utf8String(
                                    "GPAC GPAC Handler",
                                ),
                            },
                            dinf: None,
                            iloc: None,
                            ipro: None,
                            iinf: None,
                            xml: None,
                            bxml: None,
                            pitm: None,
                            fiin: None,
                            idat: None,
                            iref: None,
                            iprp: None,
                            grpl: None,
                            unknown_boxes: [],
                        },
                    ),
                    mdia: MediaBox {
                        mdhd: MediaHeaderBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            creation_time: 3235468835,
                            modification_time: 3235468835,
                            timescale: 1000,
                            duration: 1000,
                            language: Langauge(
                                [
                                    21,
                                    14,
                                    4,
                                ],
                            ),
                            pre_defined: 0,
                        },
                        hdlr: HandlerBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            pre_defined: 0,
                            handler_type: HandlerType::Video,
                            reserved: [
                                0,
                                0,
                                0,
                            ],
                            name: Utf8String(
                                "GPAC ISO Video Handler",
                            ),
                        },
                        elng: None,
                        minf: MediaInformationBox {
                            vmhd: Some(
                                VideoMediaHeaderBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            1,
                                        ),
                                    },
                                    graphicsmode: 0,
                                    opcolor: [
                                        0,
                                        0,
                                        0,
                                    ],
                                },
                            ),
                            smhd: None,
                            hmhd: None,
                            sthd: None,
                            vvhd: None,
                            unknown_boxes: [],
                            dinf: DataInformationBox {
                                dref: DataReferenceBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    url: [
                                        DataEntryUrlBox {
                                            full_header: FullBoxHeader {
                                                version: 0,
                                                flags: U24Be(
                                                    1,
                                                ),
                                            },
                                            location: None,
                                        },
                                    ],
                                    urn: [],
                                    imda: [],
                                    snim: [],
                                    unknown_boxes: [],
                                },
                            },
                            stbl: SampleTableBox {
                                stsd: SampleDescriptionBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    boxes: [
                                        UnknownBox {
                                            header: BoxHeader {
                                                size: Short(
                                                    123,
                                                ),
                                                box_type: FourCc(
                                                    "mp4v",
                                                ),
                                            },
                                            data.len: 115,
                                        },
                                    ],
                                },
                                stts: TimeToSampleBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries: [
                                        TimeToSampleBoxEntry {
                                            sample_count: 1,
                                            sample_delta: 1000,
                                        },
                                    ],
                                },
                                ctts: None,
                                cslg: None,
                                stsc: SampleToChunkBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries.len: 1,
                                },
                                stsz: Some(
                                    SampleSizeBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        sample_size: 9626,
                                        sample_count: 1,
                                        entry_size.len: 0,
                                    },
                                ),
                                stz2: None,
                                stco: Some(
                                    ChunkOffsetBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        entry_count: 1,
                                        chunk_offset.len: 1,
                                    },
                                ),
                                co64: None,
                                stss: None,
                                stsh: None,
                                padb: None,
                                stdp: None,
                                sdtp: None,
                                sbgp: [],
                                sgpd: [],
                                subs: [],
                                saiz: [],
                                saio: [],
                                csgp: [],
                            },
                        },
                        unknown_boxes: [],
                    },
                    unknown_boxes: [],
                    udta: None,
                },
            ],
            mvex: None,
            unknown_boxes: [],
            udta: None,
        },
    ),
    moof: [],
    mdat: [
        MediaDataBox {
            data.len: 9626,
        },
    ],
    imda: [],
    meta: Some(
        MetaBox {
            full_header: FullBoxHeader {
                version: 0,
                flags: U24Be(
                    0,
                ),
            },
            hdlr: HandlerBox {
                full_header: FullBoxHeader {
                    version: 0,
                    flags: U24Be(
                        0,
                    ),
                },
                pre_defined: 0,
                handler_type: HandlerType([109, 112, 50, 49]),
                reserved: [
                    0,
                    0,
                    0,
                ],
                name: Utf8String(
                    "GPAC mp21 Handler",
                ),
            },
            dinf: None,
            iloc: None,
            ipro: None,
            iinf: None,
            xml: None,
            bxml: None,
            pitm: None,
            fiin: None,
            idat: None,
            iref: None,
            iprp: None,
            grpl: None,
            unknown_boxes: [],
        },
    ),
    styp: [],
    sidx: [],
    ssix: [],
    prft: [],
    unknown_boxes: [
        UnknownBox {
            header: BoxHeader {
                size: Short(
                    71,
                ),
                box_type: FourCc(
                    "free",
                ),
            },
            data.len: 63,
        },
    ],
    mfra: None,
}
